<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/grey_background"
    tools:context=".AveragingCostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="26dp">

        <!-- 计算结果 -->

        <TextView
            android:id="@+id/newTotalResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="新增总价(不含税): ¥0.00"
            android:textColor="@color/text_white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="18dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tax_exclusive_label"
                    android:textSize="16sp"
                    android:textColor="@color/tax_exclusive_text"
                    android:gravity="center"
                    android:background="@color/button_background"
                    />

                <TextView
                    android:id="@+id/taxExclusiveResult"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="¥0.00"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_white"
                    android:gravity="center"
                    android:background="@color/button_background"
                    android:padding="6dp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tax_inclusive_label"
                    android:textSize="16sp"
                    android:textColor="@color/tax_exclusive_text"
                    android:gravity="center"
                    android:background="@color/button_background"
                    />

                <TextView
                    android:id="@+id/taxInclusiveResult"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="¥0.00"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_white"
                    android:gravity="center"
                    android:background="@color/button_background"
                    android:padding="6dp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button"
            android:textSize="16sp"
            android:textColor="@color/text_white"
            android:backgroundTint="@color/button_background"
            android:layout_marginBottom="25dp"
            android:padding="6dp"
            android:letterSpacing="0.2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:hint="@string/new_number_hint"
                android:textColorHint="@color/tax_exclusive_text"
                app:boxBackgroundColor="@color/button_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:textColor="@color/text_white"
                    android:background="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:hint="@string/new_price_hint"
                android:textColorHint="@color/tax_exclusive_text"
                app:boxBackgroundColor="@color/button_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPriceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    android:textColor="@color/text_white"
                    android:background="@null" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:hint="@string/old_number_hint"
                android:textColorHint="@color/tax_exclusive_text"
                app:boxBackgroundColor="@color/button_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:textColor="@color/text_white"
                    android:background="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:hint="@string/old_price_hint"
                android:textColorHint="@color/tax_exclusive_text"
                app:boxBackgroundColor="@color/button_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPriceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    android:textColor="@color/text_white"
                    android:background="@null" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



    </LinearLayout>

</ScrollView>